// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`actual Current session first viewport at 40 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
⛁⛁⛁⛁⛀⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
~44.5k / 1M (4.5%)
⛁ Used 44.5k (4.5%)
⛶ Free 955.5k (95.5%)
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark

original footer"
`;

exports[`actual Current session first viewport at 40 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
⛁⛁⛁⛁⛀⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
~44.5k / 1M (4.5%)
⛁ Used 44.5k (4.5%)
⛶ Free 955.5k (95.5%)
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark

original footer"
`;

exports[`actual Current session first viewport at 40 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
⛁⛁⛁⛁⛀⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
~44.5k / 1M (4.5%)
⛁ Used 44.5k (4.5%)
⛶ Free 955.5k (95.5%)
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
editor
original footer"
`;

exports[`actual Current session first viewport at 40 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open |
escape/ctrl+c Back
⛁⛁⛁⛁⛀⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶⛶
fake/test
~44.5k / 1M (4.5%)
⛁ Used 44.5k (4.5%)
⛶ Free 955.5k (95.5%)
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
editor
original footer"
`;

exports[`actual Current session first viewport at 80 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
transcript
transcript

editor


original footer"
`;

exports[`actual Current session first viewport at 80 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
transcript
transcript

editor


original footer"
`;

exports[`actual Current session first viewport at 80 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
regular transcript
regular transcript
regular transcript
regular transcript
regular transcript
editor
original footer"
`;

exports[`actual Current session first viewport at 80 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
regular transcript
regular transcript
regular transcript
regular transcript
regular transcript
editor
original footer"
`;

exports[`actual Current session first viewport at 100 x 24 'fullscreen' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
transcript
transcript

editor


original footer"
`;

exports[`actual Current session first viewport at 100 x 24 'fullscreen' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
transcript
transcript

editor


original footer"
`;

exports[`actual Current session first viewport at 100 x 24 'regular' 1`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
regular transcript
regular transcript
regular transcript
regular transcript
regular transcript
editor
original footer"
`;

exports[`actual Current session first viewport at 100 x 24 'regular' 2`] = `
"Current session
up/down Select | enter Open | escape/ctrl+c Back
⛁ ⛁ ⛁ ⛁ ⛀ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   fake/test
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ~44.5k / 1M (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛁ Used 44.5k (4.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶   ⛶ Free 955.5k (95.5%)
⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶ ⛶
S1 | On(default) | $0.0000
Project: pi:pi-test (undeclared)
Pending / trigger (~tokens)
Noting        █████░░░░░  52.0% 26/50
Consolidation ░░░░░░░░░░   0.0% 0/5k
Dreaming      ░░░░░░░░░░   0.0% 0/5k
→ Off
  Runs
  Project
  Mark
regular transcript
regular transcript
regular transcript
regular transcript
regular transcript
editor
original footer"
`;
